<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/start_logo"
        android:scaleType="fitXY"/>

    <LinearLayout
        app:layout_constraintBottom_toTopOf="@+id/tv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="50dp"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/bg_login_phone">

        <ImageView
            android:layout_marginLeft="7dp"
            android:src="@mipmap/logins_phone"
            android:layout_width="27dp"
            android:layout_height="22dp"/>

        <TextView
            android:text="@string/str_phone_login"
            android:textSize="17sp"
            android:gravity="center"
            android:textColor="@color/color_33333"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/tv_title"
        app:layout_constraintBottom_toTopOf="@+id/tv_weixin"
        android:layout_width="match_parent"
        android:layout_marginBottom="19dp"
        android:layout_height="wrap_content">

        <View
            android:layout_width="45.2dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="70.2dp"
            android:layout_marginRight="16.2dp"
            android:background="@color/colorWhite" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/str_choice_login"
            android:textColor="@color/colorWhite"
            android:textSize="13.2dp" />

        <View
            android:layout_width="45.2dp"
            android:layout_height="1dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16.2dp"
            android:layout_marginRight="70.2dp"
            android:background="@color/colorWhite" />

    </RelativeLayout>
   <TextView
       android:id="@+id/tv_weixin"
       android:text="@string/str_wechat"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintBottom_toTopOf="@+id/tv_agreement"
        android:layout_width="wrap_content"
       android:gravity="center"
        android:layout_height="wrap_content"
       android:drawableTop="@mipmap/logins_wechat"
       android:drawablePadding="5dp"
       android:paddingBottom="50dp"
       android:textSize="16sp"
       android:textColor="@color/colorWhite"/>


        <TextView
            android:id="@+id/tv_agreement"
            app:layout_constraintBottom_toTopOf="@+id/tv_bottom"
            android:drawableLeft="@mipmap/rectangle_no"
            android:gravity="center"
            android:drawablePadding="5dp"
            android:textColor="@color/colorWhite"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textSize="12sp"
            android:text="@string/str_login_re"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    <com.zm.liaopei.widgets.BottomAgreementLayout
        android:id="@+id/tv_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>