<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/CoordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:fitsSystemWindows="false"
                android:orientation="vertical"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:elevation="0dp"
                app:layout_behavior=".widgets.UserHomeBehavior">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="63.2dp"
                        android:layout_marginLeft="16dp"
                        android:background="@mipmap/big_v_home_mask_s"
                        app:layout_collapseMode="pin" />
                </com.google.android.material.appbar.CollapsingToolbarLayout>

                <net.lucode.hackware.magicindicator.MagicIndicator
                    android:id="@+id/tabLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="45.2dp"
                    android:layout_marginLeft="14.2dp"
                    android:background="@color/colorWhite" />
            </com.google.android.material.appbar.AppBarLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewpager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="26dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="@drawable/bg_home_appraise"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:drawableLeft="@mipmap/appraise"
                    android:drawablePadding="4dp"
                    android:text="@string/str_appraise"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:background="@color/colorWhite" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableLeft="@mipmap/letter"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:text="@string/str_letter"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:background="@drawable/bg_home_phone"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawablePadding="4dp"
                    android:drawableStart="@mipmap/home_wechat"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/str_wechat"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    app:drawableLeftCompat="@mipmap/home_wechat" />

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center"
                    android:background="@color/colorWhite" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:text="@string/str_phone"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    app:drawableLeftCompat="@mipmap/home_phone" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</layout>