<?xml version="1.0" encoding="utf-8"?>
<layout  xmlns:android="http://schemas.android.com/apk/res/android">

        <com.scwang.smartrefresh.layout.SmartRefreshLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="26dp"
                android:layout_marginRight="16dp">

                <ImageView
                    android:id="@+id/img_home"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@mipmap/start_logo" />

                <LinearLayout
                    android:id="@+id/line_love"
                    android:layout_width="129dp"
                    android:layout_height="35dp"
                    android:layout_alignParentRight="true"

                    android:layout_marginTop="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@drawable/bg_on_love"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_love"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="3dp"
                        android:src="@mipmap/home_love" />

                    <TextView
                        android:id="@+id/tv_love"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/join_love"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="23dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/home_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:textColor="@color/color_33333"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/img_sex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="4dp"
                        android:src="@mipmap/hoem_boy" />

                    <ImageView
                        android:id="@+id/img_vip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@mipmap/home_vip" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="9dp"
                    android:text="ID:31484545"
                    android:textColor="@color/color_33333"
                    android:textSize="12sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="15dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/home_attestation"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@mipmap/attestation"
                        android:drawablePadding="3dp"
                        android:gravity="center_vertical"
                        android:text="真人认证"
                        android:textColor="@color/color666666"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/home_age"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@mipmap/mine_age"
                        android:drawablePadding="3dp"
                        android:gravity="center_vertical"
                        android:text="25岁"
                        android:textColor="@color/color666666"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/home_job"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@mipmap/mine_job"
                        android:drawablePadding="3dp"
                        android:gravity="center_vertical"
                        android:text="兼职模特"
                        android:textColor="@color/color666666"
                        android:textSize="12dp" />

                    <TextView
                        android:id="@+id/home_city"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@mipmap/mine_city"
                        android:drawablePadding="3dp"
                        android:gravity="center_vertical"
                        android:text="武汉市"
                        android:textColor="@color/color666666"
                        android:textSize="12dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="73dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_home_stature"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/str_stature"
                            android:textColor="@color/color_999999" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:text="163.cm"
                            android:textColor="@color/color_33333"
                            android:textSize="24dp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="73dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_home_stature"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/str_weight"
                            android:textColor="@color/color_999999" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:text="163.cm"
                            android:textColor="@color/color_33333"
                            android:textSize="24dp" />


                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="73dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="24dp"
                    android:background="@drawable/bg_home_stature"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/str_city"
                        android:textColor="@color/color_999999"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="深圳市，武汉市"
                        android:textColor="@color/color_33333"
                        android:textSize="20sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16sp"
                    android:text="@string/str_user_photo"
                    android:textColor="@color/colorFF0061"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/home_recylerview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="12dp" />


            </LinearLayout>

        </com.scwang.smartrefresh.layout.SmartRefreshLayout>



</layout>